--- a/mcp-chat/app-config.yaml
+++ b/mcp-chat/app-config.yaml
@@ -104,6 +104,50 @@ catalog:
     #   rules:
     #     - allow: [User, Group]
 
+mcpChat:
+  providers:
+    - id: openai
+      token: ${OPENAI_API_KEY}
+      model: gpt-4o-mini
+    - id: gemini
+      token: ${GEMINI_API_KEY}
+      model: gemini-2.5-flash
+    - id: claude
+      token: ${CLAUDE_API_KEY}
+      model: claude-sonnet-4-20250514
+    - id: ollama
+      baseUrl: 'http://localhost:11434'
+      model: llama3.1:8b
+  mcpServers:
+    - id: brave-search-server
+      name: Brave Search Server
+      npxCommand: '@modelcontextprotocol/server-brave-search'
+      env:
+        BRAVE_API_KEY: ${BRAVE_API_KEY}
+    - id: kubernetes-server
+      name: Kubernetes Server
+      npxCommand: 'kubernetes-mcp-server@latest'
+      env:
+        KUBECONFIG: ${KUBECONFIG}
+    - id: backstage-server
+      name: Backstage Server
+      url: 'http://localhost:7007/api/mcp-actions/v1'
+      headers:
+        Authorization: 'Bearer ${BACKSTAGE_API_TOKEN}'
+  quickPrompts:
+    - title: 'Web Search & Research'
+      description: 'Find the latest information, documentation, and best practices'
+      prompt: 'Search for the latest developments in Model Context Protocol and its applications'
+      category: Research
+    - title: 'Kubernetes & Cloud'
+      description: 'Query cloud resources, containers, and deployment status'
+      prompt: 'Show me the current Kubernetes deployments, pods status, and resource utilization in a nicely formatted text with bullet points'
+      category: Infrastructure
+    - title: 'Backstage Insights'
+      description: 'Get insights from Backstage, including catalog entities and documentation'
+      prompt: 'Describe the "example-app" microservice in our Backstage catalog'
+      category: Portals
+
 kubernetes:
   # see https://backstage.io/docs/features/kubernetes/configuration for kubernetes configuration options
 
