--- a/mcp-chat/packages/backend/package.json
+++ b/mcp-chat/packages/backend/package.json
@@ -43,6 +43,7 @@
     "@backstage/plugin-search-backend-node": "^1.3.14",
     "@backstage/plugin-signals-backend": "^0.3.7",
     "@backstage/plugin-techdocs-backend": "^2.0.5",
+    "@backstage-community/plugin-mcp-chat-backend": "^1.0.0",
     "app": "link:../app",
     "better-sqlite3": "^12.0.0",
     "node-gyp": "^10.0.0",
