--- a/scaffolder-chat-integration/app-config.yaml
+++ b/scaffolder-chat-integration/app-config.yaml
@@ -1,5 +1,5 @@
 app:
-  title: Scaffolded Backstage App
+  title: Scaffoldeder Chat integration App
   baseUrl: http://localhost:3000
 
 organization:
@@ -82,17 +82,16 @@ catalog:
     - type: file
       target: ../../examples/entities.yaml
 
-    # Local example template
-    - type: file
-      target: ../../examples/template/template.yaml
-      rules:
-        - allow: [Template]
-
-    # Local example organizational data
     - type: file
       target: ../../examples/org.yaml
       rules:
         - allow: [User, Group]
+
+    - type: file
+      target: ../../examples/send-notification.yaml
+      rules:
+        - allow: [Template]
+
 
     ## Uncomment these lines to add more example data
     # - type: url
