--- a/adr/packages/app/package.json
+++ b/adr/packages/app/package.json
@@ -14,6 +14,7 @@
     "lint": "backstage-cli package lint"
   },
   "dependencies": {
+    "@backstage-community/plugin-adr": "^0.17.2",
     "@backstage/app-defaults": "^1.7.2",
     "@backstage/catalog-model": "^1.7.6",
     "@backstage/cli": "^0.34.5",
